fix: the check branch name error.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch }}
-          repository: uPtt/backend
+          repository: uPtt-messenger/backend
           path: backend
 
       - name: Set up Python
