--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         id: cache-backend-build
         with:
           path: backend/build
-          key: ${{ runner.os }}-backend-build-${{ github.event.inputs.branch }}-${{ hashFiles('backend/**') }}
+          key: ${{ runner.os }}-backend-build-${{ hashFiles('backend/**') }}
           restore-keys: |
             ${{ runner.os }}-backend-build-
 
