--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,44 +40,48 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-backend-build-
 
-      - name: Set up Python
-        if: steps.cache-backend-build.outputs.cache-hit != 'true'
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Generate requirements.txt
-        if: steps.cache-backend-build.outputs.cache-hit != 'true'
-        working-directory: backend
+      - name: Show cache status
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry poetry-plugin-export
-          poetry export -f requirements.txt --output requirements.txt
+          echo "Cache hit: ${{ steps.cache-backend-build.outputs.cache-hit }}"
+          ls -lR backend/build-packages
 
-      - name: Install dependencies
-        if: steps.cache-backend-build.outputs.cache-hit != 'true'
-        working-directory: backend
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install Nuitka
-
-      - name: Build backend
-        if: steps.cache-backend-build.outputs.cache-hit != 'true'
-        working-directory: backend
-        run: |
-          if [ ${{ matrix.os }} == 'macos-latest' ]; then
-              ./build.sh build
-          else
-              ./build.bat build
-          fi
+#      - name: Set up Python
+#        if: steps.cache-backend-build.outputs.cache-hit != 'true'
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Generate requirements.txt
+#        if: steps.cache-backend-build.outputs.cache-hit != 'true'
+#        working-directory: backend
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install poetry poetry-plugin-export
+#          poetry export -f requirements.txt --output requirements.txt
+#
+#      - name: Install dependencies
+#        if: steps.cache-backend-build.outputs.cache-hit != 'true'
+#        working-directory: backend
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#          pip install Nuitka
+#
+#      - name: Build backend
+#        if: steps.cache-backend-build.outputs.cache-hit != 'true'
+#        working-directory: backend
+#        run: |
+#          if [ ${{ matrix.os }} == 'macos-latest' ]; then
+#              ./build.sh build
+#          else
+#              ./build.bat build
+#          fi
 
       - name: Build app
         if: ${{ matrix.os }} == 'macos-latest'
         run: |
           cp -r installer/uPtt.app .
-          cp -r backend/build/uptt_backend.dist/* uPtt.app/Contents/MacOS
-          cp -r backend/build/uptt_mq_server.dist/* uPtt.app/Contents/MacOS
+          cp -r backend/build-packages/* uPtt.app/Contents/MacOS
           ls -lR uPtt.app
           zip -r uPtt.zip uPtt.app
 
