--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry poetry-plugin-export
         poetry export -f requirements.txt --output docs/requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r docs/requirements.txt
+    - name: Install graphviz
+      run: |
+        sudo apt-get install graphviz
     - name: Build and Commit
       uses: sphinx-notes/pages@v2
       with:
