--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,38 @@ jobs:
               ./build.bat build
           fi
 
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
+          repository: uPtt-messenger/frontend
+          path: frontend
+
+      - name: Cache frontend build
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-frontend-build-${{ hashFiles('frontend/**') }}
+          path: frontend/build
+          restore-keys: |
+              ${{ runner.os }}-frontend-build-
+
+      - name: Install Node.js
+        if: steps.cache-frontend-build.outputs.cache-hit != 'true'
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        if: steps.cache-frontend-build.outputs.cache-hit != 'true'
+        working-directory: frontend
+        run: |
+          npm install
+
+      - name: Build frontend
+        if: steps.cache-frontend-build.outputs.cache-hit != 'true'
+        working-directory: frontend
+        run: |
+          npm run build
+
       - name: Build app
         if: ${{ matrix.os }} == 'macos-latest'
         run: |
