--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
         if: steps.cache-frontend-build.outputs.cache-hit != 'true'
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '20'
 
       - name: Install dependencies
         if: steps.cache-frontend-build.outputs.cache-hit != 'true'
@@ -102,7 +102,7 @@ jobs:
         if: steps.cache-frontend-build.outputs.cache-hit != 'true'
         working-directory: frontend
         run: |
-          npm run build
+          bash build.sh
 
       - name: Build app
         if: ${{ matrix.os }} == 'macos-latest'
