chore: install pnpm.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,7 @@ jobs:
         working-directory: frontend
         run: |
           npm install
+          npm i pnpm --global
 
       - name: Build frontend
         if: steps.cache-frontend-build.outputs.cache-hit != 'true'
